apply org.openrewrite.java.migrate.JavaBestPractices