@@ -17,13 +17,10 @@ import com.microsoft.gctoolkit.event.generational.PSYoungGen;
 import com.microsoft.gctoolkit.event.generational.ParNew;
 import com.microsoft.gctoolkit.event.generational.ParNewPromotionFailed;
 import com.microsoft.gctoolkit.event.generational.SystemGC;
-import com.microsoft.gctoolkit.event.jvm.JVMEvent;
 import com.microsoft.gctoolkit.io.GCLogFile;
 import com.microsoft.gctoolkit.jvm.Diarizer;
 import com.microsoft.gctoolkit.parser.jvm.PreUnifiedDiarizer;
 import org.junit.jupiter.api.Test;
-
-import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertSame;
@@ -32,13 +29,15 @@ public class PreUnifiedGenerationalParserTest extends ParserTest {
 
     private static final String END_OF_DATA_SENTINEL = GCLogFile.END_OF_DATA_SENTINEL;
 
+    @Override
     protected Diarizer diarizer() {
         return new PreUnifiedDiarizer();
-    };
+    }
 
+    @Override
     protected GCLogParser parser() {
         return new GenerationalHeapParser();
-    };
+    }
 
     @Test
     public void testDefNewDetails() {
@@ -48,9 +47,9 @@ public class PreUnifiedGenerationalParserTest extends ParserTest {
                 END_OF_DATA_SENTINEL
         };
 
-        List<JVMEvent> jvmEvents = feedParser(lines);
+        var jvmEvents = feedParser(lines);
 
-        DefNew defNew = (DefNew) jvmEvents.get(0);
+        var defNew = (DefNew) jvmEvents.getFirst();
 
         // occupancy before(size before)->occupancy after(size)
         assertMemoryPoolValues(defNew.getHeap(), 502104, 2044800, 102148, 2044800);
@@ -79,15 +78,15 @@ public class PreUnifiedGenerationalParserTest extends ParserTest {
                 END_OF_DATA_SENTINEL
         };
 
-        List<JVMEvent> jvmEvents = feedParser(lines);
+        var jvmEvents = feedParser(lines);
 
-        ParNew parNew = (ParNew) jvmEvents.get(0);
+        var parNew = (ParNew) jvmEvents.getFirst();
         assertMemoryPoolValues(parNew.getHeap(), 16000, 81280, 1725, 81280);
         assertMemoryPoolValues(parNew.getYoung(), 16000, 18624, 1725, 18624);
         assertMemoryPoolValues(parNew.getTenured(), 0, 81280 - 18624, 0, 81280 - 18624);
         assertEquals(0.0167922, parNew.getDuration());
 
-        SystemGC full = (SystemGC) jvmEvents.get(1);
+        var full = (SystemGC) jvmEvents.get(1);
         assertMemoryPoolValues(full.getHeap(), 4654, 81280, 1602, 81280);
         assertMemoryPoolValues(full.getYoung(), 4654, 81280 - 62656, 0, 81280 - 62656);
         assertMemoryPoolValues(full.getTenured(), 0, 81280 - 18624, 1602, 62656);
@@ -121,13 +120,13 @@ public class PreUnifiedGenerationalParserTest extends ParserTest {
         };
 
 
-        List<JVMEvent> jvmEvents = feedParser(lines);
+        var jvmEvents = feedParser(lines);
 
-        InitialMark initialMark = (InitialMark) jvmEvents.get(0);
+        var initialMark = (InitialMark) jvmEvents.getFirst();
         assertEquals(0.0008727d, initialMark.getDuration());
-        ParNewPromotionFailed parNewPromotionFailed = (ParNewPromotionFailed) jvmEvents.get(4);
+        var parNewPromotionFailed = (ParNewPromotionFailed) jvmEvents.get(4);
         assertEquals(0.0023005d, parNewPromotionFailed.getDuration());
-        ConcurrentModeFailure concurrentModeFailure = (ConcurrentModeFailure) jvmEvents.get(5);
+        var concurrentModeFailure = (ConcurrentModeFailure) jvmEvents.get(5);
         assertEquals(0.095695d, concurrentModeFailure.getDuration());
     }
 
@@ -141,16 +140,16 @@ public class PreUnifiedGenerationalParserTest extends ParserTest {
                 END_OF_DATA_SENTINEL
         };
 
-        List<JVMEvent> jvmEvents = feedParser(lines);
+        var jvmEvents = feedParser(lines);
 
-        PSYoungGen psYoungGen = (PSYoungGen) jvmEvents.get(0);
+        var psYoungGen = (PSYoungGen) jvmEvents.getFirst();
         assertSame(psYoungGen.getGCCause(), GCCause.ALLOCATION_FAILURE);
         assertEquals(0.0485326, psYoungGen.getDuration());
         assertMemoryPoolValues(psYoungGen.getHeap(), 610571, 819712, 581588, 819712);
         assertMemoryPoolValues(psYoungGen.getTenured(), 610571 - 232960, 819712 - 232960, 581588 - 116224, 819712 - 232960);
         assertMemoryPoolValues(psYoungGen.getYoung(), 232960, 232960, 116224, 232960);
 
-        FullGC fullGC = (FullGC) jvmEvents.get(1);
+        var fullGC = (FullGC) jvmEvents.get(1);
         assertSame(fullGC.getGCCause(), GCCause.ADAPTIVE_SIZE_POLICY);
         assertEquals(0.0449697, fullGC.getDuration());
         // todo: value of heap size before collection is 808448 should be 819712.
@@ -179,28 +178,28 @@ public class PreUnifiedGenerationalParserTest extends ParserTest {
                 END_OF_DATA_SENTINEL
         };
 
-        List<JVMEvent> jvmEvents = feedParser(lines);
+        var jvmEvents = feedParser(lines);
 
-        ParNew parNew = (ParNew) jvmEvents.get(0);
+        var parNew = (ParNew) jvmEvents.getFirst();
         assertSame(parNew.getGCCause(), GCCause.GC_LOCKER);
         assertMemoryPoolValues(parNew.getHeap(), 35230, 354944, 38078, 354944);
         assertMemoryPoolValues(parNew.getYoung(), 32671, 349568, 35386, 349568);
         assertMemoryPoolValues(parNew.getTenured(), 35230 - 32671, 354944 - 349568, 38078 - 35386, 354944 - 349568);
         assertEquals(0.0082790, parNew.getDuration());
 
-        InitialMark initialMark = (InitialMark) jvmEvents.get(1);
+        var initialMark = (InitialMark) jvmEvents.get(1);
         assertEquals(0.014794d, initialMark.getDuration());
-        ConcurrentMark concurrentPhase = (ConcurrentMark) jvmEvents.get(2);
+        var concurrentPhase = (ConcurrentMark) jvmEvents.get(2);
         assertEquals(0.005d, concurrentPhase.getDuration());
-        ConcurrentPreClean preClean = (ConcurrentPreClean) jvmEvents.get(3);
+        var preClean = (ConcurrentPreClean) jvmEvents.get(3);
         assertEquals(0.0d, preClean.getDuration());
-        AbortablePreClean abortablePreClean = (AbortablePreClean) jvmEvents.get(4);
+        var abortablePreClean = (AbortablePreClean) jvmEvents.get(4);
         assertEquals(0.349d, abortablePreClean.getDuration());
-        CMSRemark cmsRemark = (CMSRemark) jvmEvents.get(5);
+        var cmsRemark = (CMSRemark) jvmEvents.get(5);
         assertEquals(0.069964d, cmsRemark.getDuration());
-        ConcurrentSweep concurrentSweep = (ConcurrentSweep) jvmEvents.get(6);
+        var concurrentSweep = (ConcurrentSweep) jvmEvents.get(6);
         assertEquals(0.001d, concurrentSweep.getDuration());
-        ConcurrentReset reset = (ConcurrentReset) jvmEvents.get(7);
+        var reset = (ConcurrentReset) jvmEvents.get(7);
         assertEquals(0.005d, reset.getDuration());
     }
 
@@ -223,18 +222,18 @@ public class PreUnifiedGenerationalParserTest extends ParserTest {
                 END_OF_DATA_SENTINEL
         };
 
-        List<JVMEvent> jvmEvents = feedParser(lines);
+        var jvmEvents = feedParser(lines);
 
-        ParNew parNew = (ParNew) jvmEvents.get(0);
+        var parNew = (ParNew) jvmEvents.getFirst();
         assertMemoryPoolValues(parNew.getHeap(), 1856305, 1965056, 851287, 1965056);
         assertMemoryPoolValues(parNew.getYoung(), 1143174, 1188864, 132096, 1188864);
         assertMemoryPoolValues(parNew.getTenured(), 1856305 - 1143174, 1965056 - 1188864, 851287 - 132096, 1965056 - 1188864);
         assertEquals(0.1554100, parNew.getDuration());
 
-        InitialMark initialMark = (InitialMark) jvmEvents.get(1);
+        var initialMark = (InitialMark) jvmEvents.get(1);
         assertEquals(0.1976100, initialMark.getDuration());
 
-        CMSRemark cmsRemark = (CMSRemark) jvmEvents.get(5);
+        var cmsRemark = (CMSRemark) jvmEvents.get(5);
         assertEquals(0.6306470, cmsRemark.getDuration());
     }
 }
